[gd_scene load_steps=12 format=3 uid="uid://cm0lw3nd0kw7d"]

[ext_resource type="Texture2D" uid="uid://8xxc7fdv2rl2" path="res://src/media/gameObjects/entities/player/chompersSpriteSheetv2.png" id="1_dlubo"]
[ext_resource type="Script" path="res://src/scenes/gameObjects/entities/player/player.gd" id="1_ev1iy"]
[ext_resource type="PackedScene" uid="uid://cyc4eax6g4cjv" path="res://src/components/hurtboxComponent.tscn" id="2_v0tt5"]
[ext_resource type="PackedScene" uid="uid://dhgs7vny0y0xq" path="res://src/components/healthComponent.tscn" id="3_b752o"]

[sub_resource type="Animation" id="Animation_q62i2"]
resource_name = "anim_idle"
length = 0.75
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 0, 1, 2, 3, 4, 5, 6]
}

[sub_resource type="Animation" id="Animation_o07sf"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_g70rx"]
_data = {
"RESET": SubResource("Animation_o07sf"),
"anim_idle": SubResource("Animation_q62i2")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ocmmf"]
size = Vector2(10, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mvywc"]
size = Vector2(10, 16)

[sub_resource type="Gradient" id="Gradient_dsnpq"]
offsets = PackedFloat32Array(0, 0.641509)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_743rw"]
gradient = SubResource("Gradient_dsnpq")
fill = 1
fill_from = Vector2(0.5, 0.491453)

[node name="Player" type="CharacterBody2D" groups=["player"]]
script = ExtResource("1_ev1iy")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_g70rx")
}

[node name="PlayerDeathAnimationComponent" type="CanvasLayer" parent="."]

[node name="HealthComponent" parent="." instance=ExtResource("3_b752o")]

[node name="Visuals" type="Node2D" parent="."]

[node name="Body" type="Sprite2D" parent="Visuals"]
position = Vector2(0, -9.5)
texture = ExtResource("1_dlubo")
hframes = 8

[node name="HurtboxComponent" parent="." node_paths=PackedStringArray("healthComponent", "hurtboxCollision") instance=ExtResource("2_v0tt5")]
healthComponent = NodePath("../HealthComponent")
hurtboxCollision = NodePath("CollisionShape2D")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtboxComponent"]
position = Vector2(0, -8)
shape = SubResource("RectangleShape2D_ocmmf")
debug_color = Color(0.635294, 0.0235294, 0.152941, 0.643137)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -8)
shape = SubResource("RectangleShape2D_mvywc")
debug_color = Color(1, 1, 1, 0.42)

[node name="Light" type="PointLight2D" parent="."]
position = Vector2(0, -8)
color = Color(0.190762, 0.190762, 0.190762, 0.168627)
texture = SubResource("GradientTexture2D_743rw")

[node name="WallSlideRaycasts" type="Node2D" parent="."]

[node name="TopRight" type="RayCast2D" parent="WallSlideRaycasts"]
position = Vector2(0, -16)
target_position = Vector2(-7, 0)

[node name="TopLeft" type="RayCast2D" parent="WallSlideRaycasts"]
position = Vector2(0, -16)
target_position = Vector2(7, 0)

[node name="BottomRight" type="RayCast2D" parent="WallSlideRaycasts"]
target_position = Vector2(7, 0)

[node name="BottomLeft" type="RayCast2D" parent="WallSlideRaycasts"]
target_position = Vector2(-7, 0)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
offset_right = 60.0
offset_bottom = 50.0
theme_override_constants/separation = -5

[node name="VelocityLabel" type="Label" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
text = "velocity"

[node name="StateLabel" type="Label" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "state"

[node name="FacingLabel" type="Label" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
text = "facing"

[node name="DirectionLabel" type="Label" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
text = "direction"

[node name="CanJumpLabel" type="Label" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
text = "can jump"
